# Krill-Android

./: .gitignore  Cargo.toml  LICENSE  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/jamiidao/community/krill/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/jamiidao/community/krill/: Init.kt  MainActivity.kt  Navigation.kt  QR.kt  Utils.kt  rustFFI.kt
app/src/main/java/jamiidao/community/krill/components/: BackgroundDecorations.kt  Buttons.kt  Errors.kt  Loader.kt  Logo.kt  TextComponents.kt
app/src/main/java/jamiidao/community/krill/dashboard/: ActivityView.kt  Shell.kt  ViewOrganization.kt  memberships.kt
app/src/main/java/jamiidao/community/krill/deeplinks/: JoinOrganization.kt
app/src/main/java/jamiidao/community/krill/frostServices/: DkgService.kt
app/src/main/java/jamiidao/community/krill/notifications_module/: Channels.kt  MessagingFCM.kt  RequestNotificationsPermission.kt
app/src/main/java/jamiidao/community/krill/ui/theme/: Color.kt  Fonts.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: avatar.xml  avatar_filled.xml  baby_birds_singing_in_a_nest.xml  calendar.xml  error.xml  ic_launcher_foreground.xml  krill_logo.xml  krill_white.xml  members.xml  qrcode.xml  signature.xml
app/src/main/res/values/: ic_launcher_background.xml  themes.xml
app/src/test/java/jamiidao/community/krill/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
krill-mobile-common/: Cargo.toml
krill-mobile-common/src/: lib.rs  notifications.rs
native/: Cargo.toml  Makefile.toml  uniffi.toml
native/src/: errors.rs  lib.rs  tracing_keys.rs  utils.rs
native/src/api/: activity.rs  init.rs  mod.rs  notification_channels.rs  notification_processor.rs  org_info.rs  permissions.rs
native/src/frost_ops/: mod.rs  participate.rs  processor.rs
native/src/network/: mod.rs  quic_connection.rs
native/src/storage/: activities.rs  mod.rs  org_info.rs  store.rs
native/uniffi_out/jamiidao/community/krill/: rustFFI.kt
