[package]
name = "krill-native"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "krill_native"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
krill-common = { path = "/workspaces/krill/krill-common", features = ["quic"] }
quinn = { version = "0.11.9", default-features = false, features = [
    "bloom",
    "log",
    "runtime-smol",
    "rustls",
    "rustls-ring",
    "platform-verifier",
] }
serde_json = "1.0.149"
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
uniffi = { version = "0.31.1", features = ["cli"] }
redb.workspace = true
thiserror.workspace = true
camino.workspace = true
async-dup.workspace = true
bitcode.workspace = true
blocking.workspace = true
tai64.workspace = true
android_log-sys.workspace = true
async-fs.workspace = true
tracing = { version = "0.1.44", default-features = false }
base64ct = { version = "1.8.3", features = ["std"] }
futures-lite = "2.6.1"
async-net = "2.0.0"
