[package]
name = "krill-native"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "krill_native"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
krill-common = { path = "/workspaces/krill/krill-common", features = ["quic"] }
frost-dkg-types = { git = "https://github.com/448-OG/Frost-Dkg-Ops.git", features = [
    "frost_ops",
    "email",
] }

#frost-dkg-ops = { git = "https://github.com/448-OG/Frost-Dkg-Ops.git" }
quinn = { version = "0.11.9", default-features = false, features = [
    "bloom",
    "log",
    "runtime-smol",
    "rustls",
    "rustls-ring",
    "platform-verifier",
] }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
uniffi = { version = "0.31.1", features = ["cli"] }
redb.workspace = true
thiserror.workspace = true
camino.workspace = true
async-dup.workspace = true
bitcode.workspace = true
blocking.workspace = true
tai64.workspace = true
android_log-sys.workspace = true
async-fs.workspace = true
tracing = { version = "0.1.44", default-features = false }
base64ct = { version = "1.8.3", features = ["std"] }
futures-lite = "2.6.1"
async-net = "2.0.0"
frost-ed25519 = "3.0.0"
async-lock = "3.4.2"
faster-hex = "0.10.0"
bs58 = { version = "0.5.1", features = ["std"] }
hifitime = { version = "4.3.0", default-features = false }
percent-encoding = "2.3.2"
blake3 = { version = "1.8.5", default-features = false }
frost-core = "3.0.0"
rand = "=0.8"
async-io = "2.6.0"
smol = "2.0.2"
